2013-07-11
----------

Added Mersenne Twister Generator


2013-07-10
----------

Added the SSE version of parisi-rapuano
generator. This needs at least SSE2


2013-05-27
----------

Bumped to version 0.5:
4 generators + speed tests

Added an option to have a preferred generator


2013-05-23
----------

Added `rand` from stdlib to the speed-test.
Just for comparison with the others.


2013-04-26
----------

Separated the TODO list from the README.

Done some experiments about changing the pr_rand() function
to a define, just as ISAAC is implemented. The results show
almost no improvement so it is left as it is.

Added the Xorshift generator

2013-03-12
----------

Added the 64 bits version of ISAAC
generator.


2013-03-08
----------

Added a very simple version of the 
Isaac random number generator.


2013-03-07
----------

Added a test utility for measuring the
speed of the different generators


2013-03-05
----------

Added the 64-bits implementation of the
WELL generator. Although it still needs
to have information in its source code.


2013-03-04
----------

Modified the Makefile, now it also creates
a library that you can link using -lrands
and pointing with -L to wherever librands.a
is (^_^)


2013-03-01
----------

Changed the form of the WELL generator after
I discovered how it worked

Added more information to the README


2013-02-22
----------

Initial commit of the basic structure
of the library, including the two first
generators: parisi-rapuano and WELL512

Added the Makefile and the Changelog